:sparkles: Add index page markup

--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@ layout: home
 ---
 
 <div id="main" role="main">
-  <div class="sang">
-    <h1>
-      hi
-    </h1>
-  </div>
+  <section class="hello">
+    <h1> HI STRANGERS </h1>
+    <p> Hello there, nice to meet you! </p>
+  </section>
+  <section class="gallery">
+    <div class="galery-box">
+      <img src="" alt="">
+      <div class="description">
+        <p>blah blah blah</p>
+      </div>
+    </div>
+  </section>
 </div>
